--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "@supabase/supabase-js": "^2.49.4",
+    "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.10.3",
     "next": "15.3.1",
     "openai": "^4.97.0",
